--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!-- Write your HTML in this file -->
-<a href="https://flatironschool.com">f</a>
+<a href="https://flatironschool.com">flatiron</a>
